# overlaykit

./: CMakeLists.txt  README.md
include/: config_manager.h  drawing_engine.h  hotkey_manager.h  main.h  overlay_window.h  pinned_panel.h  platform.h  settings_window.h  toolbar.h  tray.h
installer/: overlaykit.iss
src/: config_manager.cpp  drawing_engine.cpp  hotkey_manager.cpp  main.cpp  overlay_window.cpp  pinned_panel.cpp  platform_linux.cpp  platform_windows.cpp  settings_window.cpp  toolbar.cpp  tray.cpp
